--- a/powercord_manifest.json
+++ b/powercord_manifest.json
@@ -1,8 +1,8 @@
 {
     "name": "naruto",
-    "description": "Allows you to use a Background Image without greatly altering the basic Layout of Discord",
-    "version": "1",
+    "description": "A theme for users who loves Naruto anime.",
+    "version": "2",
     "author": "6gx",
-    "theme": "naruto.theme.css",
-    "license": "GPL-2.0 License"
+    "theme": "naruto.css",
+    "license": "MIT"
 }
